# clip_sam_semantic_mapping

./: .gitignore  CMakeLists.txt  FINAL_OPTIMIZATION_SUMMARY.md  PROJECT_FINAL_STATUS.md  PYTHON_MODULES_GUIDE.md  README.md  RELEASE_NOTES.md  TROUBLESHOOTING.md  package.xml  requirements.txt  setup.py
config/: clip_sam_config.yaml  performance_config.yaml
docs/: CUSTOM_SIMULATION.md  INSTALLATION.md  LAUNCH_METHODS.md  SIMULATION_SETUP.md  USAGE.md  WAYPOINT_NAVIGATION.md
launch/: hierarchical_clip_sam_mapping.launch  semantic_only.launch  wpb_stage_robocup_custom.launch
rviz/: hierarchical_semantic_mapping.rviz
scripts/: install_dependencies.sh  launch_complete_system.sh
src/: accuracy_improvement_modules.py  clip_room_classifier.py  clip_sam_semantic_mapper.py  furniture_structure_detector.py  object_detector.py  performance_optimizer.py  sam_segmentation.py  system_monitor.py  waypoint_generator.py
src/utils/: __init__.py  config_loader.py  image_utils.py  path_manager.py
